fix width overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,6 @@ html, body {
 }
 
 #root {
-  height: 100%
+  width: 100%;
+  height: 100%;
 }
