--- a/src/portfolio/portfolio.module.css
+++ b/src/portfolio/portfolio.module.css
@@ -1,5 +1,5 @@
 .portfolio {
-    width: 100%;
+    max-width: 100%;
     background-color: #090a1b;
     padding: 1em 1em 1em 1em;
 }
